feat: update article handler
